  - NumFactory.java provides methods to create a number, takes care of the representation given in the CalculatorConfig
  - NumUtils.java provides methods to work with objects implementing the Num interface
  - unikl.disco.numbers.implementations provides four implementations:
    - Real numbers with single precision or double precision.
    - Rational numbers based on Integer or BigInteger (requires Apache Commons Math 3 and special values in unikl.disco.numbers.values). 
* Convolution: Improvements for convolution involving \delta_T.
* FunctionalTests: Further streamlined test configuration generation.
* Curve.java: isBurstDelay() was removed, functionality is provided by isDelayedInfiniteBurst() since version 2.2.7.
* Updated the output tests.
* Network.java: Fixed getting a server by its ID (had an offset of +1 before).
* Various fixes, performance improvements, reduced code duplication, improved parameter naming, etc.

v2.2.8 "Heavy Ion" (2016-Dec-06)
--------------------------------
* Fixed bugs concerning the delay and backlog bounding with \delta_T, T>0, service curves (delayed infinite burst).
* Improved JavaDocs for use_gamma and use_extra_gamma
Thanks to Mathias Kreider from the GSI Helmholtz Centre for Heavy Ion Research for reporting these bugs. This release was code named "Heavy Ion".

v2.2.7 (2016-Nov-17)
--------------------
* Fixed a bug when convolving \delta_T with T>0 (delayed infinite burst).
* Curve.java:
 - is_zero_delay_infinite_burst was replaced by the more general is_delayed_infinite_burst.
 - Visibility was restricted, reading the value is enabled by isDelayedInfiniteBurst().
* LinearSegment.java: Constructors that accept primitive double arguments were added.
* FunctionalTests: 
 - Streamlined test config generation.
 - assertEquals based on double values now considers the internal number representation's rounding error safety margin epsilon. 

v2.2.6 (2016-Mar-31)
--------------------